kubernetes/services/salamandre/base/nextcloud/collabora/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name collabora-code
  labels:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: &instance nextcloud
    app.kubernetes.io/component: *name
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: *name
      app.kubernetes.io/instance: *instance
      app.kubernetes.io/component: *name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *name
        app.kubernetes.io/instance: *instance
        app.kubernetes.io/component: *name
    spec:
      serviceAccountName: collabora-code
      containers:
        - name: collabora-code
          # renovate: datasource=docker image=collabora/code
          image: collabora/code:24.04.10.2.1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 30
            periodSeconds: 5
          ports:
            - name: http
              containerPort: 9980
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: true
            capabilities:
              add:
              - MKNOD
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
