kubernetes/services/salamandre/base/nextcloud/collabora/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &name collabora-code
  labels:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: &instance nextcloud
    app.kubernetes.io/component: *name
spec:
  type: ClusterIP
  ports:
    - port: 9980
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *instance
    app.kubernetes.io/component: *name
